+Don't show Python auto-comp choices after numbers.
+Fix file modified indicator not being hidden after saving file.
+Fix number of bugs with opening files from filebrowser on gtk versions.
+Fix statusbar line column number not being updated when clicking on.
Find Results links.
+Fix drag and drop of text not scrolling window as the mouse is moved towards 
top or bottom of buffer.

#-----------------------------------------------------------------------------#

VERSION 0.4.01
DATE 11/24/2008
18th Alpha Release

NEWS:

Quick Bug fix release to fix some configuration related bugs.

BUG FIXES:
+Language settings not being loaded
+Running Editra from command line on Mac/Linux would not load some config
settings.

#-----------------------------------------------------------------------------#

VERSION 0.4.0
DATE 11/23/2008
17th Alpha Release

NEWS:

On Macintosh and Windows the user configuration files have moved to more 
platform specific locations. This transition should should happen automatically
but if there are any problems follow the onscreen instructions to manually
transition your preference settings to the new location. See the changelog
below for the details of other major changes.

NEW: [features/improvements]
+User configuration files are now kept at standard platform locations
+Support for multiple views of the same file
+Improved Python auto-indenter (patch from Ofer Schwarz)
+Show auto-completion choices with Ctrl+Space (patch from Ofer Schwarz)
+Add Paste After command (patch from Dario Ghilardi)
+Report number of matches that were replaced in a Replace All action
+Expand groups when doing a regular expression search and replace
+Add (Polish, Slovenian, Latvian) translations
+New version of PyShell. Supports custom styles.
+Middle click closes tabs (patch from craig.ds)
+Double click empty tab area opens new tab (patch from craig.ds)
+Add support for VBScript
+Improved text drag and drop

BUG FIXES: